# engine-2d

./: .gitmodules  CMakeLists.txt
core/: CMakeLists.txt
core/libraries/imgui/: imgui_tables.cpp
core/source/core/: core.pch
core/source/core/algorithm/: algorithm.hpp  random.cpp  random.hpp
core/source/core/collections/: array.hpp  hash_map.hpp  hash_set.hpp  list.hpp
core/source/core/editor/: camera_editor.cpp  camera_editor.hpp
core/source/core/entities/: entity.hpp  entity_registry.hpp
core/source/core/fonts/: character_range.hpp  font.cpp  font.hpp  font_builder.cpp  font_builder.hpp  glyph.hpp
core/source/core/game/: game.cpp  game.hpp
core/source/core/game/components/: sprite_component.hpp  text_component.hpp  transform_component.cpp  transform_component.hpp  ui_element_component.hpp
core/source/core/game/systems/: sprite_render_system.cpp  sprite_render_system.hpp  text_render_system.cpp  text_render_system.hpp
core/source/core/graphics/: camera.cpp  camera.hpp  debug.hpp  frame_buffer.cpp  frame_buffer.hpp  graphics.cpp  graphics.hpp  index_buffer.cpp  index_buffer.hpp  renderer.cpp  renderer.hpp  renderer_stats.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex.hpp  vertex_array.cpp  vertex_array.hpp  vertex_attribute.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_layout.cpp  vertex_layout.hpp
core/source/core/io/: file_system.cpp  file_system.hpp
core/source/core/math/: math.cpp  math.hpp
core/source/core/memory/: shared_pointer.hpp  unique_pointer.hpp
core/source/core/numerics/: bit_mask.cpp  bit_mask.hpp  matrix.hpp  numbers.hpp  rectangle.cpp  rectangle.hpp  vector2.hpp  vector3.hpp  vector4.hpp
core/source/core/platform/: input.hpp  window.hpp
core/source/core/platform/glfw/: glfw_input.cpp  glfw_input.hpp  glfw_window.cpp  glfw_window.hpp
core/source/core/string/: codepoint.hpp  string.hpp
core/source/core/time/: stopwatch.cpp  stopwatch.hpp
core/source/core/ui/: ui_element.cpp  ui_element.hpp  ui_image.cpp  ui_image.hpp  ui_root.cpp  ui_root.hpp
editor/: CMakeLists.txt
editor/source/: main.cpp
game/: CMakeLists.txt  steam_appid.txt
game/content/shaders/: default.frag  default.vert
game/source/: main.cpp
server/: CMakeLists.txt
